force-app/main/default/objects/Code_Postal_Commune__c/Code_Postal_Commune__c.object-meta.xml
<CustomObject>
    <label>Code Postal Commune</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom Commune</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code Postal Commune</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>