force-app/main/default/objects/Code_Postal_Commune__c/fields/Code_postal__c.field-meta.xml
<CustomField>
    <fullName>Code_postal__c</fullName>
    <label>Code postal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>