force-app/main/default/objects/Code_Postal_Commune__c/fields/Commune__c.field-meta.xml
<CustomField>
    <fullName>Commune__c</fullName>
    <label>Commune</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>