force-app/main/default/objects/Code_Postal_Commune__c/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <label>Departement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>